// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for talon-one destination: createAudience action - all fields 1`] = `
Object {
  "audienceId": "Xunf2QoIA0MWf)kFQ",
  "audienceName": "Xunf2QoIA0MWf)kFQ",
}
`;

exports[`Testing snapshot for talon-one destination: createAudience action - required fields 1`] = `
Object {
  "audienceId": "Xunf2QoIA0MWf)kFQ",
  "audienceName": "Xunf2QoIA0MWf)kFQ",
}
`;

exports[`Testing snapshot for talon-one destination: deleteAudience action - all fields 1`] = `""`;

exports[`Testing snapshot for talon-one destination: deleteAudience action - required fields 1`] = `""`;

exports[`Testing snapshot for talon-one destination: deleteAudience action - required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "ApiKey-v1 some_api_key",
    ],
    "destination-hostname": Array [
      "YJSS]PGSZ&%5",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for talon-one destination: trackEvent action - all fields 1`] = `
Object {
  "customerProfileId": "TePOjI",
  "eventAttributes": Object {
    "testType": "TePOjI",
  },
  "eventType": "TePOjI",
  "type": "TePOjI",
}
`;

exports[`Testing snapshot for talon-one destination: trackEvent action - required fields 1`] = `
Object {
  "customerProfileId": "TePOjI",
  "eventType": "TePOjI",
  "type": "TePOjI",
}
`;

exports[`Testing snapshot for talon-one destination: updateAudience action - all fields 1`] = `
Object {
  "audienceName": "XE[HNHsL(",
}
`;

exports[`Testing snapshot for talon-one destination: updateAudience action - required fields 1`] = `
Object {
  "audienceName": "XE[HNHsL(",
}
`;

exports[`Testing snapshot for talon-one destination: updateCustomerProfile action - all fields 1`] = `
Object {
  "attributes": Object {
    "testType": "Q4o2ZtVB2ORS#)97jXw5",
  },
  "audiencesChanges": Object {
    "adds": Array [
      8330460698509312,
    ],
    "deletes": Array [
      8330460698509312,
    ],
  },
  "runRuleEngine": false,
}
`;

exports[`Testing snapshot for talon-one destination: updateCustomerProfile action - required fields 1`] = `
Object {
  "audiencesChanges": Object {},
}
`;

exports[`Testing snapshot for talon-one destination: updateCustomerProfilesAttributes action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "testType": "Tg*32H7pxzSW",
      },
      "customerProfileId": "Tg*32H7pxzSW",
    },
  ],
  "mutualAttributes": Object {
    "testType": "Tg*32H7pxzSW",
  },
}
`;

exports[`Testing snapshot for talon-one destination: updateCustomerProfilesAttributes action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customerProfileId": "Tg*32H7pxzSW",
    },
  ],
}
`;

exports[`Testing snapshot for talon-one destination: updateCustomerProfilesAudiences action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "adds": Array [
        1698122359111680,
      ],
      "customerProfileId": "89TQv9^(UBBbvz",
      "deletes": Array [
        1698122359111680,
      ],
    },
  ],
}
`;

exports[`Testing snapshot for talon-one destination: updateCustomerProfilesAudiences action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customerProfileId": "89TQv9^(UBBbvz",
    },
  ],
}
`;
